--- a/.github/workflows/run-e2e.yml
+++ b/.github/workflows/run-e2e.yml
@@ -1,6 +1,6 @@
 name: Run E2E tests
 
-on: push 
+on: [push] 
 
 jobs: 
   cypress-run:
@@ -11,9 +11,9 @@ jobs:
         uses: actions/checkout@v4
     
       - name: Install Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20
 
       - name: Install Dependencies
         uses: npm i
