--- a/.github/workflows/run-e2e.yml
+++ b/.github/workflows/run-e2e.yml
@@ -11,12 +11,12 @@ jobs:
         uses: actions/checkout@v4
     
       - name: Install Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 18
 
       - name: Install Dependencies
-        uses: npm i
+        run: npm install
 
       - name: Cypress run
         uses: cypress-io/github-action@v6
