--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@t3-oss/env-nextjs": "^0.7.3",
     "axios": "^1.6.2",
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
